# fam_detailing

./: .python-version  _config.yml  biz_outline.md  deleteme.md  index.md  pyproject.toml  temp.md
assets/: startup_supply_amazon_links.xlsx
business_outline/: index.md
charts/: average_pricing_chart.py  investment_recovery_chart.py  sparkleco_pricing_chart.py
checklist/: index.md
e_gift_card/: egiftcard.html
landing_page/: index.md
market_inquiry/: index.md
